argocd-ingress/argocd-ingress-http.yaml
# argocd-ingress/argocd-ingress-http.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-http-ingress
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false" # Keep if using Nginx Ingress Controller for HTTP
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"  # ArgoCD server uses HTTPS internally
spec:
  ingressClassName: nginx # Or 'traefik' depending on your Ingress Controller setup in Docker Desktop
  rules:
  - host: argocd.192.168.65.3.nip.io # <--- CHANGE THIS LINE
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
